# maius-core

./: .gitignore  Anchor.toml  Cargo.toml  brainstorm.txt
app/: copyIdl.js  package.json
app/pages/: _app.tsx  index.tsx  integrations.tsx  invoices.tsx  payment.tsx  plans.tsx  settings.tsx  transactions.tsx
app/src/: idl.json
app/src/components/: 41375-laptop-rocket.json  CreateNewIntegration.tsx  Header.tsx  IntegrationCard.tsx  InvoiceRow.tsx  LandingPage.tsx
app/src/components/Dashboard/: index.tsx
app/src/components/Header/: CurrentBalance.tsx
app/src/components/Hero/: 23730-3d-mobile-payment.json  Hero.tsx
app/src/components/Payment/: Step1.tsx  Step2.tsx  Step3.tsx
app/src/components/Settings/: CurrentMerchantData.tsx
app/src/components/Sidebar/: Sidebar.tsx
app/src/hooks/: useAppProvider.tsx  useCustomerProvider.tsx  withAuth.tsx
app/src/types/: maius_core.ts  maius_payment.ts
deploy/: maius_core-keypair.json  maius_payment-keypair.json
programs/maius-core/: Cargo.toml
programs/maius-core/src/: lib.rs
programs/maius-core/src/poseidon_merkle_tree/: state.rs  state_roots.rs
programs/maius-core/src/user_account/: instructions.rs  state.rs
programs/maius-payment/: Cargo.toml
programs/maius-payment/src/: lib.rs
programs/maius-payment/src/instructions/: create_service.rs  initialize_invoice.rs  initialize_merchant.rs  mod.rs  transaction.rs  transfer_a_to_b.rs  update_invoice.rs  update_merchant.rs
programs/maius-payment/src/schema/: customer_services.rs  invoice.rs  merchant.rs  mod.rs  service.rs  service_invoice.rs  transaction.rs
tests/: maius-core.ts
